Error-prone compile-type analysis (#1389)
* introduction of error-prone in gradle build; first fixes of common mistakes
* fix a few common and uncommon error-prone warnings
* move ZoneId.systemDefault() for LocalDate to a utils class